# Inventario-Sole

./: .env ejemplo  .gitignore  TODO.md  boot.bat  clases.drawio  install.bat  install.py  mypy.ini  proyect.toml  pyproject.toml  readme.md  requirements.txt  run.py  setup.sh
.githooks/: pre-commit
Backend/: .dockerignore  .env ejemplo  app.py  boot.bat  boot.py  boot.sh  clases.drawio  install.sh  readme.md  requirements.txt
Backend/App/: __init__.py
Backend/App/Auth/: Autenticacion.py  Decorators.py
Backend/Config/: __init__.py
Backend/Mercado Shop/: cambiar_tienda.py
Backend/MercadoShops/: MercadoLibreAPI.py
Backend/app/: __init__.py
Frontend/Inventario/: README.md  angular.json  package-lock.json  package.json
Frontend/Inventario-Sole/: .dockerignore  README.md  angular.json  dockerfile  entrypoint.sh  karma.conf.js  nginx.conf  package-lock.json  package.json  proxy.conf.json
Kubernetes/: Ej Longhorn   backend.yaml  frontend.yaml  longhorn-mongo.yaml  mongo.yaml  pod-restart.yaml
Mercado Shop/: activar_publicacion.py  get_token.py  lista_productos.py
backend/: app.py  boot.py  boot.sh  dockerfile  install.sh  requirements.txt
backend/App/: __init__.py
backend/app/: db.py  main.py
backend/config/: __init__.py
database/: readme.md
docs/: TODO.md
frontend/: angular.json  karma.conf.js  nginx.conf  package-lock.json  package.json
frontend/Inventario-Sole/: package-lock.json  package.json
frontend/src/: index.html  styles.css
kubernetes/: backend.yaml  frontend.yaml  longhorn-uploads.yaml  pod-restart.yaml
(+446 files in other folders)
